--- a/style/default-layout.css
+++ b/style/default-layout.css
@@ -1,3 +1,14 @@
+/*	Attributions, credit and copyright
+ *	
+ *	Copyright (C) 2012 André jr Steenveld all rights reserved
+ *	
+ *	Licensed under the MIT public license for the full license see the LICENSE file
+ *	
+ *	Libaries and other sources used:
+ *		- Dojo toolkit under the new BSD license http://bugs.dojotoolkit.org/browser/dojo/trunk/LICENSE
+ *		- ES5 shim under https://github.com/kriskowal/es5-shim/blob/master/LICENSE
+ */
+
 /* The inital overlay, we obscure the page until we are done rendering the widgets */
 #initial-overlay { 
 	background-color: white;
